// Copyright 2020 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option go_package = "github.com/google/exposure-notifications-server/internal/pb;pb";

message RevisionToken {
    string kid = 1;
    bytes data = 2;
}

message RevisionTokenData {
    repeated RevisableKey revisableKeys = 1;
}

message RevisableKey {
    bytes temporaryExposureKey = 1;
    int32 intervalNumber = 2;
    int32 intervalCount = 3;
}